--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,17 @@
             <artifactId>log4j-core</artifactId>
             <version>2.17.2</version>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.22</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.kwhat</groupId>
+            <artifactId>jnativehook</artifactId>
+            <version>2.2.2</version>
         </dependency>
 
         <dependency>
