--- a/src/main/java/com/godpalace/teacher3/student/Student/src/main/java/com/godpalace/student/native/Student3Dll/Student3Dll/Student3Dll.vcxproj.filters
+++ b/src/main/java/com/godpalace/teacher3/student/Student/src/main/java/com/godpalace/student/native/Student3Dll/Student3Dll/Student3Dll.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="StudentKeyboard.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="StudentMouse.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
