--- a/src/main/java/com/godpalace/teacher3/student/Student/src/main/java/com/godpalace/student/native/Student3Dll/Student3Dll/Student3Dll.vcxproj
+++ b/src/main/java/com/godpalace/teacher3/student/Student/src/main/java/com/godpalace/student/native/Student3Dll/Student3Dll/Student3Dll.vcxproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <ClInclude Include="StudentKeyboard.h" />
     <ClInclude Include="StudentMouse.h" />
+    <ClInclude Include="StudentProtect.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
