--- a/src/main/java/com/godpalace/teacher3/student/Student/src/main/java/com/godpalace/student/native/Student3Dll/Student3Dll/Student3Dll.vcxproj.filters
+++ b/src/main/java/com/godpalace/teacher3/student/Student/src/main/java/com/godpalace/student/native/Student3Dll/Student3Dll/Student3Dll.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="StudentProtect.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="StudentUsb.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
