--- a/src/main/java/com/godpalace/teacher3/student/Student/src/main/java/com/godpalace/student/native/Student3Dll/Student3Dll/Student3Dll.vcxproj.filters
+++ b/src/main/java/com/godpalace/teacher3/student/Student/src/main/java/com/godpalace/student/native/Student3Dll/Student3Dll/Student3Dll.vcxproj.filters
@@ -32,7 +32,7 @@
     <ClInclude Include="StudentUsb.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="StudentKillSoft.h">
+    <ClInclude Include="StudentFileManager.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
