--- a/src/main/java/com/godpalace/teacher3/student/Student/src/main/java/com/godpalace/student/native/Student3Dll/Student3Dll/Student3Dll.vcxproj
+++ b/src/main/java/com/godpalace/teacher3/student/Student/src/main/java/com/godpalace/student/native/Student3Dll/Student3Dll/Student3Dll.vcxproj
@@ -27,8 +27,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="StudentFileManager.h" />
     <ClInclude Include="StudentKeyboard.h" />
-    <ClInclude Include="StudentKillSoft.h" />
     <ClInclude Include="StudentMouse.h" />
     <ClInclude Include="StudentProtect.h" />
     <ClInclude Include="StudentUsb.h" />
