--- a/src/main/java/com/godpalace/teacher3/student/Student/pom.xml
+++ b/src/main/java/com/godpalace/teacher3/student/Student/pom.xml
@@ -8,6 +8,17 @@
     <artifactId>Student</artifactId>
     <version>1.0</version>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
