--- a/src/main/java/com/godpalace/teacher3/student/Student/pom.xml
+++ b/src/main/java/com/godpalace/teacher3/student/Student/pom.xml
@@ -60,6 +60,16 @@
         </dependency>
 
         <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.54.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>net.jpountz.lz4</groupId>
+            <artifactId>lz4</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.l42111996</groupId>
             <artifactId>kcp-base</artifactId>
             <version>1.6</version>
