--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
             <version>12.3.1</version>
         </dependency>
 
+        <!-- SLF4J -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -99,16 +100,25 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- JNativeHook -->
         <dependency>
             <groupId>com.github.kwhat</groupId>
             <artifactId>jnativehook</artifactId>
             <version>2.2.2</version>
         </dependency>
 
+        <!-- Database -->
         <dependency>
             <groupId>com.godpalace.data</groupId>
             <artifactId>GLDatabase</artifactId>
             <version>1.0</version>
+        </dependency>
+
+        <!-- BLAKE3 -->
+        <dependency>
+            <groupId>io.github.rctcwyvrn</groupId>
+            <artifactId>blake3</artifactId>
+            <version>1.3</version>
         </dependency>
 
         <dependency>
